--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
-
-<AnchorPane prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
+<AnchorPane prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
    <children>
       <Label fx:id="weatherLabel" layoutX="43.0" layoutY="29.0" styleClass="basicText" text="WEATHER City Date">
          <font>
@@ -25,9 +20,7 @@
       <Label layoutX="43.0" layoutY="431.0" prefHeight="35.0" prefWidth="88.0" styleClass="smallHeading" text="WIND  " />
       <Button layoutX="611.0" layoutY="197.0" mnemonicParsing="false" styleClass="basicButton" text="AVERAGE TEMP" />
       <Button layoutX="608.0" layoutY="269.0" mnemonicParsing="false" styleClass="basicButton" text="MIN-MAX TEMP" />
-      <Label layoutX="552.0" layoutY="30.0" styleClass="basicTextWhite" text="Choose timeline" />
-      <Label layoutX="43.0" layoutY="504.0" styleClass="valueText" text="X m/s" />
-      <Label layoutX="275.0" layoutY="504.0" styleClass="valueText" text="Y km" />
+      <Label layoutX="542.0" layoutY="28.0" styleClass="basicTextWhite" text="Choose timeline" />
       <Label layoutX="275.0" layoutY="431.0" styleClass="smallHeading" text="VISIBILITY" />
 
       <Label fx:id="label2" layoutX="144.0" layoutY="98.0" prefHeight="47.0" prefWidth="52.0" styleClass="basicHeading" text="2H" />
@@ -46,12 +39,13 @@
        </items>
       </ComboBox>
 
-      <Button fx:id="getweatherdatabutton" layoutX="437.0" layoutY="271.0" mnemonicParsing="false" onAction="#calculateData" text="GetWeatherData" />
-      <Label fx:id="Windlabel" layoutX="45.0" layoutY="475.0" text="Wind" />
-      <Label fx:id="VisibilityLabel" layoutX="275.0" layoutY="475.0" text="Visibility" />
-      <Label fx:id="temperaturelabel" layoutX="45.0" layoutY="187.0" text="Temperature" />
-      <Label fx:id="coordinatesLabel" layoutX="420.0" layoutY="156.0" text="coordinates" />
-      <Label fx:id="dateandTimeLabel" layoutX="247.0" layoutY="156.0" text="date" />
+      <Button fx:id="getweatherdatabutton" layoutX="570.0" layoutY="525.0" mnemonicParsing="false" onAction="#calculateData" styleClass="basicButton" text="GetWeatherData" />
+      <Label fx:id="Windlabel" layoutX="43.0" layoutY="493.0" prefHeight="58.0" prefWidth="138.0" styleClass="valueText" />
+      <Label fx:id="VisibilityLabel" layoutX="276.0" layoutY="496.0" prefHeight="58.0" prefWidth="138.0" styleClass="valueText" />
+      <DatePicker fx:id="startTimeDP" layoutX="666.0" layoutY="77.0" />
+      <DatePicker fx:id="endTimeDP" layoutX="666.0" layoutY="115.0" />
+      <Label layoutX="542.0" layoutY="72.0" prefHeight="35.0" prefWidth="138.0" styleClass="basicTextWhite" text="Start time" />
+      <Label layoutX="542.0" layoutY="110.0" prefHeight="35.0" prefWidth="138.0" styleClass="basicTextWhite" text="End time" />
 
    </children>
 </AnchorPane>
